# rshelp

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build.yml  crates-publish.yml  publish.yml  release.yml
src/: app.rs  cache.rs  cli.rs  config.rs  emoji_util.rs  error.rs  highlight.rs  http.rs  interactive.rs  main.rs  source.rs
src/docs/: mod.rs  render.rs
src/ui/: header.rs  mod.rs  panel.rs  spinner.rs  table.rs
tests/: cli.rs
