[package]
name = "rshelp"
version = "0.1.3"
edition = "2021"
authors = ["Hadi Cahyadi <cumulus13@gmail.com>"]
description = "Enhanced Rust documentation helper with beautiful terminal output. Look up std/core/alloc docs, crates.io crate docs, and source code, right from your terminal."
license = "MIT"
repository = "https://github.com/cumulus13/rshelp"
homepage = "https://github.com/cumulus13/rshelp"
readme = "README.md"
keywords = ["cli", "docs", "help", "documentation", "terminal"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.82"

[[bin]]
name = "rshelp"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "color"] }
clap-version-flag = "1.0.7"
clap-color-help = "0.1.3"
make_colors = "1.0.2"
emoji = "0.2.1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
scraper = "0.20"
html2text = "0.17"
thiserror = "1"
dirs = "5"
terminal_size = "0.4"
textwrap = "0.16"
indicatif = "0.17"
regex = "1"
once_cell = "1"
url = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
